# ihMT

./: .gitignore  LICENSE  MATLAB vs Python notes.txt  README.ipynb  README.md  __init__.py  main.py  notebook.ipynb  pyproject.toml  recipe.yaml  run_tests.sh  sequence,py  simulation.mat  test.ipynb
MATLAB/: ihMTfit_HPC.m  ihMTfit_turbo.m
MATLAB/Tools/: func_computeW.m  func_compute_Wb.m  func_compute_Wf.m  func_expm.m  wrapper_qihMT_RAGE.m  wrapper_qihMT_RAGE_HPC.m
MATLAB/Tools/_pulses/: func_TukeyFun_pulse.m  func_compute_pulse.m
brainhack/: __init__.py  config.py  corrector.py  main.py  meta.py  pulse.py  pulses.py  run.py  sequence.py  simulator.py  system.py  trajector.py
brainhack/configs/: default.yaml
brainhack/vectorized/: pulse.py
examples/: README.ipynb  example_data.mat  example_data_config.yaml
examples/README/: README.ipynb  example_data_config.yaml
examples/sequenceOptimization/: minimizeTR.py  sequenceOptimization.ipynb  sequenceParametrizations.pkl
ihmt/: __init__.py  config.py  corrector.py  meta.py  pulse.py  recipe.yaml  run.py  sequence.py  simulator.py  system.py  trajector.py
ihmt/configs/: default.yaml  logging.yaml
ihmt/vectorized/: pulse.py
src/: .ipynb  main.py  pulses.py  sequence.py  simulator.py  system.py
tests/: __init__.py  config.yaml  simulator_test_singleRun_ALT_checkExport.mat  simulator_test_singleRun_BP_checkExport.mat  simulator_test_singleRun_CM_checkExport.mat  test_config.py  test_corrector.py  test_meta.py  test_pulse.py  test_pulses.py  test_run.py  test_sequence.py  test_simulator.py  test_system.py  test_vectorized_pulse.py  test_vectorized_pulses.py
